# pvduck

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: lint-and-test.yml  lint-test-build-deploy.yml
assets/: default_config.toml  default_config.yml
src/pvduck/: cli.py  config.py  db.py  project.py  stream.py  timeseries.py  validators.py  wikimedia.py
tests/files/: pageviews-20240818-100000.parquet  pageviews-20240818-110000.parquet
tests/integration/: test_integration.py
tests/unit/: test_db.py  test_stream.py  test_timeseries.py  test_validators.py  test_wikimedia.py
