[project]
name = "pvduck"
version = "0.1.0"
description = "Load Wikimedia pageview data to a duckdb"
readme = "README.md"
authors = [{ name = "Vegard Egeland", email = "vegardegeland@gmail.com" }]
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4.1",
    "pvstream==0.1.0",
    "pydantic>=2.12.2",
    "pyyaml>=6.0.3",
    "typer>=0.19.2",
]

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0", "ruff>=0.14.0", "ty>=0.0.1a22"]

[project.scripts]
pvduck = "pvduck.cli:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
fix = true
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
